--- a/HTML/LiveNPlaybackQuad.html
+++ b/HTML/LiveNPlaybackQuad.html
@@ -49,8 +49,8 @@
     </main>
 
     <script type="text/javascript">
-      var ip_port = "61.216.97.157:9303"; //此範例為80 port 所以省略，如果不是 80 port，則要輸入 port 號
-      var Accesskey = "sCBv2grNiSzU4Or5mdaMmdaMmdaMn9mS000FFC108962"; //此值在 NVR 裡面查看，每一台 NVR 的 Accesskey 不一樣
+      var ip_port = "61.216.97.157:9303"; //
+      var Accesskey = "sCBv2grNiSzU4Or5mdaMmdaMmdaMn9mS000FFC108962"; //
 
       //chno value:
       //channel 1 => 0x0001
